src/compiler/example/error/github/raw.githubusercontent.com/WKLive/meister-example/3fb8b76d219a593d52b21f9964ab146436bd8c0e/modules/jenkins/manifests/init.pp
import "*.pp"
import "definitions/*.pp"
